src/test/resources/sdp/examples/should-pass/minimal/minimal-IP6-expected.sdp
v=0
o=- 123 0 IN IP6 streaming.awesome.com
s=my session
