src/test/resources/sdp/examples/should-fail/bad-data/originator/bad-args/toomany.sdp
v=0
o=- 123 0 IN IP4 streaming.awesome.com dave fred jim
s=my session
